# schedule_bot

./: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml
data/: database.db  schedule.json
handlers/: about.py  admin.py  news.py  schedule.py  starosta.py  start.py
utils/: config.py  database.py  links.py  scheduler.py
